--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "dependencies": {
     "axios": "^0.18.0",
     "create-react-app-blog": "^1.0.0",
+    "font-awesome": "^4.7.0",
     "github-markdown-css": "^2.9.0",
+    "google-map-react": "^0.34.0",
     "markdown-with-front-matter-loader": "^0.1.0",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
+    "react-alert": "^4.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.3.2",
+    "react-ellipsis-text": "^1.0.0",
     "react-helmet": "^4.0.0",
     "react-router": "^3.2.0",
     "react-router-dom": "^4.3.0-rc.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-transition-group": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
